<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imc">

    <View
        android:id="@+id/view10"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="#FFEB3B"
        app:layout_constraintEnd_toStartOf="@+id/sobrepeso"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <View
        android:id="@+id/view9"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:background="#F44336"
        app:layout_constraintEnd_toStartOf="@+id/obesidadM"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <View
        android:id="@+id/view8"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:background="#F57F17"
        app:layout_constraintEnd_toStartOf="@+id/obesidad"
        app:layout_constraintTop_toBottomOf="@+id/view10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="24dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="Califica tu ejercicio"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="172dp"
        android:layout_height="47dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/custom_buttom"
        android:text="Terminar ejercicio"
        android:onClick="home"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="87dp"
        android:layout_height="34dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombreUsuario"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pesoBajo"
        android:layout_width="69dp"
        android:layout_height="19dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/pesoBajo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuimc" />

    <TextView
        android:id="@+id/obesidadM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/obesidadM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obesidad" />

    <TextView
        android:id="@+id/tuimc"
        android:layout_width="187dp"
        android:layout_height="21dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/tuimc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/obesidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/obesidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sobrepeso" />

    <TextView
        android:id="@+id/sobrepeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/sobrepeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal" />

    <TextView
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pesoBajo" />

    <View
        android:id="@+id/view4"
        android:layout_width="374dp"
        android:layout_height="186dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_bode_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />

    <View
        android:id="@+id/view5"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:background="#0277BD"
        app:layout_constraintEnd_toStartOf="@+id/pesoBajo"
        app:layout_constraintTop_toBottomOf="@+id/tuimc" />

    <View
        android:id="@+id/view7"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toStartOf="@+id/normal"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

</androidx.constraintlayout.widget.ConstraintLayout>