<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:text="Ejercicio#1"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView2"
        android:layout_width="334dp"
        android:layout_height="248dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:src="@drawable/ejemplo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="374dp"
        android:layout_height="129dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:autoPlay="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:layout_constraintVertical_bias="0.619"
        app:showFullScreenButton="false"
        app:videoId="g487mhrYCsU"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo"
        android:drawableRight="@android:drawable/ic_media_next"
        android:onClick="onClickReset"
        android:paddingRight="4dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo"
        android:drawableLeft="@android:drawable/ic_media_pause"
        android:onClick="onClickStop"
        android:paddingLeft="4dp"
        android:text="@string/stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo"
        android:drawableRight="@android:drawable/ic_media_play"
        android:onClick="onClickStart"
        android:paddingRight="3dp"
        android:text="@string/start"
        app:layout_constraintStart_toEndOf="@+id/btnStop"
        app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="381dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_cronometro"
        android:gravity="center"
        android:text=" 00 Seg"
        android:textColor="@color/colorPrimary"
        android:textSize="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="74dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/ejercicioFuerza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>